-- Reset database so this script can be rerun safely
USE roamroute;

-- Users table
CREATE TABLE users (
  id INT PRIMARY KEY AUTO_INCREMENT,
  full_name VARCHAR(255),
  user_name VARCHAR(255),
  email VARCHAR(255) UNIQUE,
  user_password VARCHAR(255),
  user_role ENUM('USER', 'ADMIN') NOT NULL DEFAULT 'USER',
  user_address VARCHAR(255),
  user_country VARCHAR(50)
);

-- Destinations table
CREATE TABLE destinations (
  id INT PRIMARY KEY AUTO_INCREMENT,
  city VARCHAR(255),
  country VARCHAR(255),
  image_url VARCHAR(500),
  image_alt TEXT
);

-- Flights table
CREATE TABLE flights (
  id INT PRIMARY KEY AUTO_INCREMENT,
  airline VARCHAR(255),
  departure_city VARCHAR(255),
  destination_city VARCHAR(255),
  departure_airport VARCHAR(100),
  destination_airport VARCHAR(100),
  flight_duration VARCHAR(50)
);

-- Accommodations table
CREATE TABLE accommodations (
  id INT PRIMARY KEY AUTO_INCREMENT,
  hotel_name VARCHAR(255),
  hotel_type VARCHAR(100),
  hotel_city VARCHAR(255),
  hotel_location VARCHAR(255),
  amenities TEXT,
  nights INT,
  latitude DOUBLE(10, 6),
  longitude DOUBLE(10, 6)
);

-- Trips table
CREATE TABLE trips (
  id INT PRIMARY KEY,
  title VARCHAR(255),
  trip_description TEXT,
  start_date DATE,
  end_date DATE,
  duration_days INT,
  keywords TEXT,
  destination_id INT,
  image_url VARCHAR(500),
  active BOOLEAN DEFAULT TRUE,
  FOREIGN KEY (destination_id) REFERENCES destinations(id)
);

-- TripPrices table
CREATE TABLE tripprices (
  id INT PRIMARY KEY AUTO_INCREMENT,
  trip_id INT,
  tripprice_provider VARCHAR(255),
  price DECIMAL(10, 2),
  tripprice_type VARCHAR(50),
  flight_id INT,
  accommodation_id INT,
  FOREIGN KEY (trip_id) REFERENCES trips(id),
  FOREIGN KEY (flight_id) REFERENCES flights(id),
  FOREIGN KEY (accommodation_id) REFERENCES accommodations(id)
);


-- Favorites table
CREATE TABLE favorites (
  id INT PRIMARY KEY AUTO_INCREMENT,
  user_id INT,
  trip_id INT,
  FOREIGN KEY (user_id) REFERENCES users(id),
  FOREIGN KEY (trip_id) REFERENCES trips(id)
);

-- ContactMessages table
CREATE TABLE contactmessages (
  id INT PRIMARY KEY AUTO_INCREMENT,
  user_id INT,
  contactmessage_subject VARCHAR(255),
  contactmessage_message TEXT,
  created_at DATETIME,
  FOREIGN KEY (user_id) REFERENCES users(id)
);


-- Orders table
CREATE TABLE orders (
  id INT PRIMARY KEY AUTO_INCREMENT,
  user_id INT NOT NULL,
  trip_id INT NOT NULL,
  flight_id INT NOT NULL,
  accommodation_id INT NOT NULL,
  order_date DATETIME,
  total_price DECIMAL(10, 2),
  status VARCHAR(50),
  FOREIGN KEY (user_id) REFERENCES users(id),
  FOREIGN KEY (trip_id) REFERENCES trips(id),
  FOREIGN KEY (flight_id) REFERENCES flights(id),
  FOREIGN KEY (accommodation_id) REFERENCES accommodations(id)
);


-- Seed data
INSERT INTO destinations (city, country, image_url, image_alt)
VALUES
  ('Barcelona', 'Spain', 'barcelonaDest.webp', 'Beautiful view of Barcelona'),
  ('Naples', 'Italy', 'naplesDest.webp', 'Scenic view of Naples'),
  ('Paris', 'France', 'parisDest.webp', 'Iconic view of Paris'),
  ('Tokyo', 'Japan', 'tokyoDest.webp', 'Vibrant cityscape of Tokyo'),
  ('New York', 'USA', 'newyorkDest.webp', 'City Lights of New York'),
  ('Rome', 'Italy', 'romeDest.webp', 'Historic Rome with ancient architecture'),
  ('Reykjavik', 'Iceland', 'reykjavikDest.webp', 'Arctic landscape of Reykjavik'),
  ('Vienna', 'Austria', 'viennaDest.webp', 'Classical Vienna cityscape'),
  ('Athens', 'Greece', 'athensDest.webp', 'Ancient Athens with Mediterranean charm'),
  ('Berlin', 'Germany', 'berlinDest.webp', 'Modern and historic Berlin'),
  ('Dublin', 'Ireland', 'dublinDest.webp', 'Colorful Dublin cityscape'),
  ('Cape Town', 'South Africa', 'capetownDest.webp', 'Scenic Cape Town with Table Mountain');

INSERT INTO flights (id, airline, departure_city, destination_city, departure_airport, destination_airport, flight_duration)
VALUES
  (1, 'Vueling', 'Alesund', 'Barcelona', 'AES', 'BCN', '5-7h'),
  (2, 'Norwegian', 'Bergen', 'Barcelona', 'BGO', 'BCN', '4-6h'),
  (3, 'SAS', 'Oslo', 'Barcelona', 'OSL', 'BCN', '3-4h'),
  (4, 'Norwegian', 'Oslo', 'Naples', 'OSL', 'NAP', '3.5-5.5h'),
  (5, 'Lufthansa', 'Stavanger', 'Naples', 'SVG', 'NAP', '4-6h'),
  (6, 'KLM', 'Kristiansand', 'Naples', 'KRS', 'NAP', '4-6h'),
  (7, 'Air France', 'Trondheim', 'Paris', 'TRD', 'CDG', '4-6h'),
  (8, 'SAS', 'Oslo', 'Paris', 'OSL', 'CDG', '3-4h'),
  (9, 'Norwegian', 'Bergen', 'Paris', 'BGO', 'CDG', '3.5-5.5h'),
  (10, 'ANA', 'Oslo', 'Tokyo', 'OSL', 'HND', '14-17h'),
  (11, 'KLM', 'Bergen', 'Tokyo', 'BGO', 'HND', '15-18h'),
  (12, 'Lufthansa', 'Trondheim', 'Tokyo', 'TRD', 'HND', '15-18h'),
  (13, 'Delta', 'Bergen', 'New York', 'BGO', 'JFK', '~12h'),
  (14, 'KLM', 'Oslo', 'New York', 'OSL', 'JFK', '~12h'),
  (15, 'Lufthansa', 'Stavanger', 'New York', 'SVG', 'JFK', '12-13h'),
  (16, 'Lufthansa', 'Stavanger', 'Rome', 'SVG', 'FCO', '5-6h'),
  (17, 'ITA Airways', 'Bergen', 'Rome', 'BGO', 'FCO', '4-5h'),
  (18, 'SAS', 'Trondheim', 'Rome', 'TRD', 'FCO', '4.5-6h'),
  (19, 'Icelandair', 'Tromsø', 'Reykjavik', 'TOS', 'KEF', '~3h'),
  (20, 'Widerøe', 'Bergen', 'Reykjavik', 'BGO', 'KEF', '2.5-3.5h'),
  (21, 'SAS', 'Oslo', 'Reykjavik', 'OSL', 'KEF', '2.5-3.5h'),
  (22, 'Austrian Airlines', 'Kristiansand', 'Vienna', 'KRS', 'VIE', '4-5h'),
  (23, 'SAS', 'Trondheim', 'Vienna', 'TRD', 'VIE', '4-5h'),
  (24, 'Norwegian', 'Oslo', 'Vienna', 'OSL', 'VIE', '3.5-4.5h'),
  (25, 'Aegean', 'Bodø', 'Athens', 'BOO', 'ATH', '7-9h'),
  (26, 'Lufthansa', 'Stavanger', 'Athens', 'SVG', 'ATH', '6.5-8.5h'),
  (27, 'SAS', 'Bergen', 'Athens', 'BGO', 'ATH', '6.5-8.5h'),
  (28, 'Norwegian', 'Ålesund', 'Berlin', 'AES', 'BER', '3-4h'),
  (29, 'SAS', 'Trondheim', 'Berlin', 'TRD', 'BER', '2.5-3.5h'),
  (30, 'Lufthansa', 'Oslo', 'Berlin', 'OSL', 'BER', '2-3h'),
  (31, 'SAS', 'Trondheim', 'Dublin', 'TRD', 'DUB', '5-7h'),
  (32, 'Lufthansa', 'Stavanger', 'Dublin', 'SVG', 'DUB', '4-6h'),
  (33, 'KLM', 'Bergen', 'Dublin', 'BGO', 'DUB', '3.5-5h'),
  (34, 'Qatar Airways', 'Oslo', 'Cape Town', 'OSL', 'CPT', '16-20h'),
  (35, 'Emirates', 'Trondheim', 'Cape Town', 'TRD', 'CPT', '17-21h'),
  (36, 'Turkish Airlines', 'Bergen', 'Cape Town', 'BGO', 'CPT', '17-21h');

INSERT INTO accommodations
(hotel_name, hotel_type, hotel_city, hotel_location, amenities, nights, latitude, longitude)
VALUES
  ('Hotel Rialto', '3 star, Family-friendly', 'Barcelona', 'Barcelona city center',
   'Breakfast included, Wi-Fi, Family rooms', 7, 41.382250, 2.177740),
  ('Hotel Piazza Bellini', '3 star, Boutique, Centrally located', 'Naples', 'Naples Historic Center',
   'Breakfast included, Wi-Fi, Air Conditioning', 7, 40.874230, 14.298920),
  ('Hotel des Arts Montmartre', '3 star, Boutique', 'Paris', 'Montmartre, Paris',
   'Free Wi-Fi, Breakfast available, Central location, Air conditioning', 8, 48.886390, 2.349010),
  ('Hotel Mystays Premier', '4 star', 'Tokyo', 'Shinjuku',
   'Breakfast, Wi-Fi, Airport shuttle', 10, 35.695050, 139.697270),
  ('The New Yorker Hotel', '4-star', 'New York', 'Midtown Manhattan',
   'Wi-Fi, Gym, Breakfast optional', 10, 40.746500, -73.989700),
  ('Hotel Roma Aurelia', '3-star', 'Rome', 'Near Vatican City',
   'Breakfast, Wi-Fi', 7, 41.913000, 12.475000),
  ('Reykjavik Lights Hotel', '3-star', 'Reykjavik', 'Central Reykjavik',
   'Breakfast, Wi-Fi', 7, 64.146000, -21.947000),
  ('Hotel Beethoven Wien', '4-star', 'Vienna', 'Museumsquartier',
   'Wi-Fi, Restaurant, Spa', 7, 48.560000, 16.350000),
  ('Athens Golden City', '3-star', 'Athens', 'City center',
   'Wi-Fi, Breakfast, Rooftop terrace', 10, 37.973500, 23.727500),
  ('Hotel Berlin Central District', '4-star', 'Berlin', 'Mitte',
   'Wi-Fi, Restaurant, Gym', 6, 52.520000, 13.405000),
  ('Jurys Inn Dublin', '3-star', 'Dublin', 'City center',
   'Wi-Fi, Restaurant, Bar', 7, 53.349000, -6.260000),
  ('Cape Town Lodge Hotel', '4-star', 'Cape Town', 'City center',
   'Breakfast, Wi-Fi, Spa, Pool', 14, -33.925000, 18.424000);

INSERT INTO trips (id, title, trip_description, start_date, end_date, duration_days, keywords, destination_id, image_url)
VALUES
  (1023, 'Warm winter trip Alesund -> Barcelona',
   'A family-friendly economy trip from Alesund to Barcelona, ideal for a warm winter escape.',
  '2027-02-13', '2027-02-20', 7, 'Economy, Family, City Break, Winter Sun', 1, 'barcelonaTrip-01.webp'),
  (5001, 'Autumn Barcelona Escape Bergen -> Barcelona',
   'A relaxed autumn getaway from Bergen to Barcelona with food, culture, and seaside walks.',
  '2026-09-15', '2026-09-22', 7, 'Culture, Food, City Break, Autumn', 1, 'barcelonaTrip-02.webp'),
  (5002, 'Barcelona Summer Highlights Oslo -> Barcelona',
   'A lively summer trip from Oslo to Barcelona for beaches, shopping, and nightlife.',
  '2026-12-01', '2026-12-08', 7, 'Beach, Shopping, City Break, Summer', 1, 'barcelonaTrip-03.webp'),
  (2047, 'Spring Getaway Oslo -> Naples',
   'A relaxing and budget-friendly cultural trip from Oslo to Naples, perfect for travelers seeking warmer weather, Italian cuisine, and historic attractions.',
  '2027-04-10', '2027-04-17', 7, 'Economy, Couples, City Break, Spring Sun', 2, 'naplesTrip-01.webp'),
  (5003, 'Naples Heritage Trip Stavanger -> Naples',
   'A scenic spring trip from Stavanger to Naples focused on history, food, and coastal views.',
  '2027-05-05', '2027-05-12', 7, 'History, Food, Culture, Spring', 2, 'naplesTrip-02.webp'),
  (5004, 'Naples Coast & Culture Kristiansand -> Naples',
   'A late-summer escape from Kristiansand to Naples with culture, city life, and great local cuisine.',
  '2026-09-20', '2026-09-27', 7, 'Culture, Food, City Break, Late Summer', 2, 'naplesTrip-03.webp'),
  (3198, 'Romantic Spring Escape Trondheim -> Paris',
   'A relaxed and romantic spring getaway from Trondheim to Paris, perfect for couples seeking culture, food, and scenic strolls along the Seine.',
  '2027-04-05', '2027-04-12', 8, 'Romance, Culture, Economy, City Experience', 3, 'parisTrip-01.webp'),
  (5005, 'Paris Weekend Escape Oslo -> Paris',
   'A charming early-summer trip from Oslo to Paris with museums, cafes, and river views.',
  '2026-06-10', '2026-06-17', 7, 'Culture, Weekend, Food, City Break', 3, 'parisTrip-02.webp'),
  (5006, 'Paris Autumn Lights Bergen -> Paris',
   'A cozy autumn journey from Bergen to Paris for art, architecture, and slow city exploring.',
  '2026-10-01', '2026-10-08', 7, 'Art, Architecture, City Break, Autumn', 3, 'parisTrip-03.webp'),
  (2031, 'Spring Explorer Trip Oslo -> Tokyo',
   'A cultural discovery trip from Oslo to Tokyo, perfect for travelers seeking food, history, and modern city life.',
  '2027-04-02', '2027-04-12', 10, 'Adventure, Culture, Cherry Blossom, Budget-Friendly', 4, 'tokyoTrip-01.webp'),
  (5007, 'Tokyo Discovery Trip Bergen -> Tokyo',
   'A summer trip from Bergen to Tokyo combining technology, temples, and street food.',
  '2026-07-20', '2026-07-30', 10, 'Food, Culture, Adventure, Summer', 4, 'tokyoTrip-02.webp'),
  (5008, 'Tokyo Winter Food Trip Trondheim -> Tokyo',
   'A winter trip from Trondheim to Tokyo focused on cuisine, neighborhoods, and bright city energy.',
  '2026-11-10', '2026-11-20', 10, 'Food, Culture, Winter, City Experience', 4, 'tokyoTrip-03.webp'),
  (2032, 'City Lights Trip Bergen to New York',
   'A vibrant city adventure to New York, suitable for shopping, sightseeing, and food lovers.',
  '2027-05-15', '2027-05-25', 10, 'Urban, Food, Shopping, Culture', 5, 'newyorkTrip-01.webp'),
  (5009, 'New York Skyline Trip Oslo -> New York',
   'A classic big-city trip from Oslo to New York for museums, shopping, and iconic skyline views.',
  '2026-08-01', '2026-08-11', 10, 'Urban, Museums, Shopping, Summer', 5, 'newyorkTrip-02.webp'),
  (5010, 'New York Holiday Escape Stavanger -> New York',
   'A festive late-year trip from Stavanger to New York with city lights, food, and holiday atmosphere.',
  '2026-12-05', '2026-12-15', 10, 'Urban, Food, Holiday, City Break', 5, 'newyorkTrip-03.webp'),
  (2059, 'Historic Escape Stavanger to Rome',
   'A budget-friendly cultural trip to Rome with historic sightseeing and Italian cuisine.',
  '2026-06-01', '2026-06-08', 7, 'History, Architecture, Budget', 6, 'romeTrip-01.webp'),
  (5011, 'Rome Heritage Trip Bergen -> Rome',
   'A late-summer Rome trip from Bergen with ancient landmarks, food, and relaxed evenings.',
  '2026-09-01', '2026-09-08', 7, 'History, Food, Culture, Late Summer', 6, 'romeTrip-02.webp'),
  (5012, 'Rome Autumn Stroll Trondheim -> Rome',
   'An autumn city break from Trondheim to Rome centered on museums, piazzas, and great pizza.',
  '2026-10-10', '2026-10-17', 7, 'Culture, Food, Museums, Autumn', 6, 'romeTrip-03.webp'),
  (2034, 'Arctic Adventure Tromsø to Reykjavik',
   'A scenic adventure trip ideal for nature lovers seeking geysers, waterfalls, and hot springs.',
  '2027-03-20', '2027-03-27', 7, 'Arctic, Outdoors, Geothermal', 7, 'reykjavikTrip-01.webp'),
  (5013, 'Reykjavik Northern Lights Trip Bergen -> Reykjavik',
   'A bright summer trip from Bergen to Reykjavik with nature, geothermal sights, and open landscapes.',
  '2026-06-15', '2026-06-22', 7, 'Nature, Outdoors, Geothermal, Summer', 7, 'reykjavikTrip-02.webp'),
  (5014, 'Reykjavik Winter Adventure Oslo -> Reykjavik',
   'A winter trip from Oslo to Reykjavik designed for dramatic scenery, hot springs, and cozy evenings.',
  '2026-11-25', '2026-12-02', 7, 'Adventure, Nature, Winter, Geothermal', 7, 'reykjavikTrip-03.webp'),
  (2035, 'Classical Europe Trip Kristiansand to Vienna',
   'A culture-rich trip full of classical music, museums, and European charm.',
  '2026-09-10', '2026-09-17', 7, 'Music, Classical, Museum', 8, 'viennaTrip-01.webp'),
  (5015, 'Vienna Music Trip Trondheim -> Vienna',
   'A spring trip from Trondheim to Vienna for concerts, coffee houses, and elegant streets.',
  '2027-04-20', '2027-04-27', 7, 'Music, Culture, City Break, Spring', 8, 'viennaTrip-02.webp'),
  (5016, 'Vienna Winter Escape Oslo -> Vienna',
   'A winter trip from Oslo to Vienna for museums, festive markets, and classical charm.',
  '2026-12-10', '2026-12-17', 7, 'Classical, Museums, Winter, City Break', 8, 'viennaTrip-03.webp'),
  (4092, 'Sunshine Escape Bodø to Athens',
   'A warm summer getaway perfect for beaches, ancient history, and Mediterranean vibes.',
  '2026-07-05', '2026-07-15', 10, 'Sun, Family, Mediterranean', 9, 'athensTrip-01.webp'),
  (5017, 'Athens Island Hop Trip Stavanger -> Athens',
   'A late-summer Athens trip from Stavanger with ancient sites, food, and sea views.',
  '2026-08-15', '2026-08-25', 10, 'History, Food, Beach, Summer', 9, 'athensTrip-02.webp'),
  (5018, 'Athens History Trip Bergen -> Athens',
   'An autumn trip from Bergen to Athens with ruins, museums, and Mediterranean food.',
  '2026-10-05', '2026-10-15', 10, 'History, Culture, Architecture, Autumn', 9, 'athensTrip-03.webp'),
  (2037, 'Urban Culture Trip Ålesund to Berlin',
   'A vibrant European city break ideal for art, nightlife, and museums.',
  '2026-10-18', '2026-10-24', 6, 'Culture, Budget, Weekend', 10, 'berlinTrip-01.webp'),
  (5019, 'Berlin Art Trip Trondheim -> Berlin',
   'A spring trip from Trondheim to Berlin focused on galleries, design, and urban culture.',
  '2027-05-18', '2027-05-24', 6, 'Art, Culture, City Break, Spring', 10, 'berlinTrip-02.webp'),
  (5020, 'Berlin Nightlife Trip Oslo -> Berlin',
   'A late-year trip from Oslo to Berlin for nightlife, food halls, and modern city life.',
  '2026-11-01', '2026-11-07', 6, 'Nightlife, Budget, Weekend, City Break', 10, 'berlinTrip-03.webp'),
  (2038, 'Cultural Escape Trondheim to Dublin',
   'A cozy trip filled with Irish pubs, history, and beautiful landscapes.',
  '2027-03-12', '2027-03-19', 7, 'Music, History, Relaxed', 11, 'dublinTrip-01.webp'),
  (5021, 'Dublin Pub Trail Trip Stavanger -> Dublin',
   'A spring trip from Stavanger to Dublin with live music, pubs, and a relaxed city pace.',
  '2027-04-01', '2027-04-08', 7, 'Pubs, Music, Culture, Spring', 11, 'dublinTrip-02.webp'),
  (5022, 'Dublin Heritage Trip Bergen -> Dublin',
   'A late-summer Dublin break from Bergen with history, green parks, and river walks.',
  '2026-09-15', '2026-09-22', 7, 'History, Relaxed, City Break, Summer', 11, 'dublinTrip-03.webp'),
  (2039, 'Adventure Getaway Oslo to Cape Town',
   'A long-haul adventure combining nature, beaches, mountains, and vibrant culture.',
  '2026-11-03', '2026-11-17', 14, 'Safari, Beaches, Hiking', 12, 'capetownTrip-01.webp'),
  (5023, 'Cape Town Safari Trip Trondheim -> Cape Town',
   'A summer adventure from Trondheim to Cape Town with wildlife, hikes, and coastal views.',
  '2027-01-10', '2027-01-24', 14, 'Safari, Hiking, Beaches, Summer', 12, 'capetownTrip-02.webp'),
  (5024, 'Cape Town Coast Trip Bergen -> Cape Town',
   'A festive season Cape Town trip from Bergen for mountain scenery, beaches, and local food.',
  '2026-12-01', '2026-12-15', 14, 'Safari, Coast, Hiking, Holiday', 12, 'capetownTrip-03.webp');

INSERT INTO tripprices (trip_id, tripprice_provider, price, tripprice_type, flight_id, accommodation_id)
VALUES
  (1023, 'Hotels.com', 645.00, 'HOTEL', NULL, 1),
  (1023, 'Booking.com', 620.00, 'HOTEL', NULL, 1),
  (1023, 'SkyScanner', 150.00, 'FLIGHT', 1, NULL),
  (1023, 'Expedia', 175.00, 'FLIGHT', 1, NULL),
  (1023, 'Momondo', 160.00, 'FLIGHT', 1, NULL),
  (5001, 'Booking.com', 660.00, 'HOTEL', NULL, 1),
  (5001, 'Expedia', 180.00, 'FLIGHT', 2, NULL),
  (5002, 'Hotels.com', 635.00, 'HOTEL', NULL, 1),
  (5002, 'Kayak', 170.00, 'FLIGHT', 3, NULL),
  (2047, 'AirBnB', 540.00, 'HOTEL', NULL, 2),
  (2047, 'GetYourGuide', 565.00, 'HOTEL', NULL, 2),
  (2047, 'TripAdvisor', 210.00, 'FLIGHT', 4, NULL),
  (2047, 'Kiwi', 230.00, 'FLIGHT', 4, NULL),
  (2047, 'Kayak', 215.00, 'FLIGHT', 4, NULL),
  (5003, 'Booking.com', 550.00, 'HOTEL', NULL, 2),
  (5003, 'Skyscanner', 220.00, 'FLIGHT', 5, NULL),
  (5004, 'Agoda', 535.00, 'HOTEL', NULL, 2),
  (5004, 'Momondo', 225.00, 'FLIGHT', 6, NULL),
  (3198, 'Booking.com', 900.00, 'HOTEL', NULL, 3),
  (3198, 'Agoda', 880.00, 'HOTEL', NULL, 3),
  (3198, 'Google Flights', 250.00, 'FLIGHT', 7, NULL),
  (3198, 'Kayak', 240.00, 'FLIGHT', 7, NULL),
  (3198, 'Kiwi.com', 270.00, 'FLIGHT', 7, NULL),
  (5005, 'Hotels.com', 910.00, 'HOTEL', NULL, 3),
  (5005, 'Expedia', 255.00, 'FLIGHT', 8, NULL),
  (5006, 'Booking.com', 890.00, 'HOTEL', NULL, 3),
  (5006, 'Momondo', 245.00, 'FLIGHT', 9, NULL),
  (2031, 'Agoda', 1015.00, 'HOTEL', NULL, 4),
  (2031, 'Booking.com', 1050.00, 'HOTEL', NULL, 4),
  (2031, 'SkyScanner', 830.00, 'FLIGHT', 10, NULL),
  (2031, 'Kayak', 860.00, 'FLIGHT', 10, NULL),
  (2031, 'Momondo', 810.00, 'FLIGHT', 10, NULL),
  (5007, 'Booking.com', 1030.00, 'HOTEL', NULL, 4),
  (5007, 'Skyscanner', 840.00, 'FLIGHT', 11, NULL),
  (5008, 'Hotels.com', 1005.00, 'HOTEL', NULL, 4),
  (5008, 'Expedia', 815.00, 'FLIGHT', 12, NULL),
  (2032, 'Hotels.com', 1120.00, 'HOTEL', NULL, 5),
  (2032, 'Booking.com', 1150.00, 'HOTEL', NULL, 5),
  (2032, 'Expedia', 540.00, 'FLIGHT', 13, NULL),
  (2032, 'FlightFinder', 515.00, 'FLIGHT', 13, NULL),
  (2032, 'Kayak', 525.00, 'FLIGHT', 13, NULL),
  (5009, 'Booking.com', 1135.00, 'HOTEL', NULL, 5),
  (5009, 'Skyscanner', 545.00, 'FLIGHT', 14, NULL),
  (5010, 'Hotels.com', 1110.00, 'HOTEL', NULL, 5),
  (5010, 'Momondo', 530.00, 'FLIGHT', 15, NULL),
  (2059, 'Booking.com', 480.00, 'HOTEL', NULL, 6),
  (2059, 'Agoda', 455.00, 'HOTEL', NULL, 6),
  (2059, 'Momondo', 210.00, 'FLIGHT', 16, NULL),
  (2059, 'Skyscanner', 230.00, 'FLIGHT', 16, NULL),
  (5011, 'Hotels.com', 495.00, 'HOTEL', NULL, 6),
  (5011, 'Kayak', 220.00, 'FLIGHT', 17, NULL),
  (5012, 'Booking.com', 470.00, 'HOTEL', NULL, 6),
  (5012, 'Expedia', 225.00, 'FLIGHT', 18, NULL),
  (2034, 'Hotels.com', 690.00, 'HOTEL', NULL, 7),
  (2034, 'Booking.com', 705.00, 'HOTEL', NULL, 7),
  (2034, 'Kayak', 260.00, 'FLIGHT', 19, NULL),
  (2034, 'Skyscanner', 250.00, 'FLIGHT', 19, NULL),
  (5013, 'Booking.com', 715.00, 'HOTEL', NULL, 7),
  (5013, 'Expedia', 265.00, 'FLIGHT', 20, NULL),
  (5014, 'Hotels.com', 700.00, 'HOTEL', NULL, 7),
  (5014, 'Momondo', 255.00, 'FLIGHT', 21, NULL),
  (2035, 'Agoda', 780.00, 'HOTEL', NULL, 8),
  (2035, 'Booking.com', 820.00, 'HOTEL', NULL, 8),
  (2035, 'Kiwi.com', 320.00, 'FLIGHT', 22, NULL),
  (2035, 'Momondo', 305.00, 'FLIGHT', 22, NULL),
  (5015, 'Hotels.com', 790.00, 'HOTEL', NULL, 8),
  (5015, 'Kayak', 315.00, 'FLIGHT', 23, NULL),
  (5016, 'Booking.com', 810.00, 'HOTEL', NULL, 8),
  (5016, 'Skyscanner', 300.00, 'FLIGHT', 24, NULL),
  (4092, 'Booking.com', 540.00, 'HOTEL', NULL, 9),
  (4092, 'Agoda', 515.00, 'HOTEL', NULL, 9),
  (4092, 'Skyscanner', 410.00, 'FLIGHT', 25, NULL),
  (4092, 'Kayak', 395.00, 'FLIGHT', 25, NULL),
  (5017, 'Hotels.com', 555.00, 'HOTEL', NULL, 9),
  (5017, 'Expedia', 405.00, 'FLIGHT', 26, NULL),
  (5018, 'Booking.com', 525.00, 'HOTEL', NULL, 9),
  (5018, 'Momondo', 400.00, 'FLIGHT', 27, NULL),
  (2037, 'Hotels.com', 420.00, 'HOTEL', NULL, 10),
  (2037, 'Booking.com', 440.00, 'HOTEL', NULL, 10),
  (2037, 'Expedia', 145.00, 'FLIGHT', 28, NULL),
  (2037, 'Momondo', 150.00, 'FLIGHT', 28, NULL),
  (5019, 'Booking.com', 430.00, 'HOTEL', NULL, 10),
  (5019, 'Skyscanner', 148.00, 'FLIGHT', 29, NULL),
  (5020, 'Hotels.com', 435.00, 'HOTEL', NULL, 10),
  (5020, 'Kayak', 152.00, 'FLIGHT', 30, NULL),
  (2038, 'Booking.com', 625.00, 'HOTEL', NULL, 11),
  (2038, 'Agoda', 600.00, 'HOTEL', NULL, 11),
  (2038, 'Kayak', 260.00, 'FLIGHT', 31, NULL),
  (2038, 'Skyscanner', 245.00, 'FLIGHT', 31, NULL),
  (5021, 'Hotels.com', 635.00, 'HOTEL', NULL, 11),
  (5021, 'Expedia', 265.00, 'FLIGHT', 32, NULL),
  (5022, 'Booking.com', 615.00, 'HOTEL', NULL, 11),
  (5022, 'Momondo', 250.00, 'FLIGHT', 33, NULL),
  (2039, 'Hotels.com', 1150.00, 'HOTEL', NULL, 12),
  (2039, 'Booking.com', 1180.00, 'HOTEL', NULL, 12),
  (2039, 'Skyscanner', 980.00, 'FLIGHT', 34, NULL),
  (2039, 'Expedia', 1020.00, 'FLIGHT', 34, NULL),
  (5023, 'Booking.com', 1165.00, 'HOTEL', NULL, 12),
  (5023, 'Kayak', 990.00, 'FLIGHT', 35, NULL),
  (5024, 'Hotels.com', 1175.00, 'HOTEL', NULL, 12),
  (5024, 'Momondo', 1015.00, 'FLIGHT', 36, NULL),
  (5001, 'Agoda', 655.00, 'HOTEL', NULL, 1),
  (5001, 'Skyscanner', 185.00, 'FLIGHT', 2, NULL),
  (5001, 'Momondo', 192.00, 'FLIGHT', 2, NULL),
  (5002, 'Booking.com', 650.00, 'HOTEL', NULL, 1),
  (5002, 'Expedia', 182.00, 'FLIGHT', 3, NULL),
  (5002, 'Skyscanner', 188.00, 'FLIGHT', 3, NULL),
  (5003, 'Hotels.com', 548.00, 'HOTEL', NULL, 2),
  (5003, 'Expedia', 218.00, 'FLIGHT', 5, NULL),
  (5003, 'Kayak', 223.00, 'FLIGHT', 5, NULL),
  (5004, 'Booking.com', 538.00, 'HOTEL', NULL, 2),
  (5004, 'Skyscanner', 219.00, 'FLIGHT', 6, NULL),
  (5004, 'Expedia', 226.00, 'FLIGHT', 6, NULL),
  (5005, 'Agoda', 905.00, 'HOTEL', NULL, 3),
  (5005, 'Kayak', 258.00, 'FLIGHT', 8, NULL),
  (5005, 'Skyscanner', 262.00, 'FLIGHT', 8, NULL),
  (5006, 'Hotels.com', 895.00, 'HOTEL', NULL, 3),
  (5006, 'Expedia', 250.00, 'FLIGHT', 9, NULL),
  (5006, 'Kayak', 254.00, 'FLIGHT', 9, NULL),
  (2059, 'Expedia', 235.00, 'FLIGHT', 16, NULL),
  (5007, 'Hotels.com', 1010.00, 'HOTEL', NULL, 4),
  (5007, 'Expedia', 832.00, 'FLIGHT', 11, NULL),
  (5007, 'Kayak', 850.00, 'FLIGHT', 11, NULL),
  (5008, 'Booking.com', 995.00, 'HOTEL', NULL, 4),
  (5008, 'Skyscanner', 798.00, 'FLIGHT', 12, NULL),
  (5008, 'Momondo', 828.00, 'FLIGHT', 12, NULL),
  (5009, 'Hotels.com', 1140.00, 'HOTEL', NULL, 5),
  (5009, 'Expedia', 548.00, 'FLIGHT', 14, NULL),
  (5009, 'Kayak', 557.00, 'FLIGHT', 14, NULL),
  (5010, 'Booking.com', 1100.00, 'HOTEL', NULL, 5),
  (5010, 'Skyscanner', 538.00, 'FLIGHT', 15, NULL),
  (5010, 'Expedia', 542.00, 'FLIGHT', 15, NULL),
  (5011, 'Agoda', 485.00, 'HOTEL', NULL, 6),
  (5011, 'Skyscanner', 218.00, 'FLIGHT', 16, NULL),
  (5011, 'Expedia', 228.00, 'FLIGHT', 16, NULL),
  (5012, 'Hotels.com', 468.00, 'HOTEL', NULL, 6),
  (5012, 'Momondo', 232.00, 'FLIGHT', 18, NULL),
  (5012, 'Skyscanner', 238.00, 'FLIGHT', 18, NULL),
  (2034, 'Expedia', 255.00, 'FLIGHT', 19, NULL),
  (5013, 'Agoda', 698.00, 'HOTEL', NULL, 7),
  (5013, 'Skyscanner', 258.00, 'FLIGHT', 19, NULL),
  (5013, 'Kayak', 266.00, 'FLIGHT', 19, NULL),
  (5014, 'Booking.com', 718.00, 'HOTEL', NULL, 7),
  (5014, 'Expedia', 262.00, 'FLIGHT', 21, NULL),
  (5014, 'Skyscanner', 269.00, 'FLIGHT', 21, NULL),
  (2035, 'Skyscanner', 330.00, 'FLIGHT', 22, NULL),
  (5015, 'Agoda', 775.00, 'HOTEL', NULL, 8),
  (5015, 'Expedia', 319.00, 'FLIGHT', 23, NULL),
  (5015, 'Momondo', 324.00, 'FLIGHT', 23, NULL),
  (5016, 'Hotels.com', 805.00, 'HOTEL', NULL, 8),
  (5016, 'Kayak', 308.00, 'FLIGHT', 24, NULL),
  (5016, 'Expedia', 312.00, 'FLIGHT', 24, NULL),
  (4092, 'Expedia', 405.00, 'FLIGHT', 25, NULL),
  (5017, 'Agoda', 520.00, 'HOTEL', NULL, 9),
  (5017, 'Momondo', 398.00, 'FLIGHT', 26, NULL),
  (5017, 'Kayak', 412.00, 'FLIGHT', 26, NULL),
  (5018, 'Booking.com', 532.00, 'HOTEL', NULL, 9),
  (5018, 'Expedia', 404.00, 'FLIGHT', 27, NULL),
  (5018, 'Skyscanner', 418.00, 'FLIGHT', 27, NULL),
  (2037, 'Skyscanner', 149.00, 'FLIGHT', 28, NULL),
  (5019, 'Agoda', 425.00, 'HOTEL', NULL, 10),
  (5019, 'Momondo', 149.00, 'FLIGHT', 29, NULL),
  (5019, 'Kayak', 154.00, 'FLIGHT', 29, NULL),
  (5020, 'Booking.com', 438.00, 'HOTEL', NULL, 10),
  (5020, 'Expedia', 156.00, 'FLIGHT', 30, NULL),
  (5020, 'Skyscanner', 161.00, 'FLIGHT', 30, NULL),
  (2038, 'Expedia', 252.00, 'FLIGHT', 31, NULL),
  (5021, 'Booking.com', 628.00, 'HOTEL', NULL, 11),
  (5021, 'Kayak', 248.00, 'FLIGHT', 32, NULL),
  (5021, 'Skyscanner', 242.00, 'FLIGHT', 32, NULL),
  (5022, 'Agoda', 608.00, 'HOTEL', NULL, 11),
  (5022, 'Expedia', 253.00, 'FLIGHT', 33, NULL),
  (5022, 'Kayak', 259.00, 'FLIGHT', 33, NULL),
  (2039, 'Kayak', 1000.00, 'FLIGHT', 34, NULL),
  (5023, 'Booking.com', 1170.00, 'HOTEL', NULL, 12),
  (5023, 'Expedia', 992.00, 'FLIGHT', 35, NULL),
  (5023, 'Skyscanner', 1002.00, 'FLIGHT', 35, NULL),
  (5024, 'Agoda', 1188.00, 'HOTEL', NULL, 12),
  (5024, 'Kayak', 1022.00, 'FLIGHT', 36, NULL),
  (5024, 'Expedia', 1032.00, 'FLIGHT', 36, NULL);
