Table users {
  id int [pk, increment]
  user_name varchar
  email varchar
  user_password varchar
  user_role varchar
  user_address varchar
  user_country varchar
}

Table destinations {
  id int [pk, increment]
  city varchar
  country varchar
  image_url varchar
  image_alt text
}

Table flights {
  id int [pk, increment]
  airline varchar
  departure_city varchar
  destination_city varchar
  departure_airport varchar
  destination_airport varchar
  flight_duration varchar
}

Table accommodations {
  id int [pk, increment]
  hotel_name varchar
  hotel_type varchar
  hotel_city varchar
  hotel_location varchar
  amenities text
  nights int
  latitude decimal(10, 6)
  longitude decimal(10, 6)
}

Table trips {
  id int [pk]
  title varchar
  trip_description text
  start_date date
  end_date date
  duration_days int
  keywords text
  destination_id int 
  image_url varchar 
  active boolean
}

Table tripprices {
  id int [pk, increment]
  trip_id int
  tripprice_provider varchar
  price decimal(10, 2)
  tripprice_type varchar
  flight_id int
  accommodation_id int
}

Table favorites {
  id int [pk, increment]
  user_id int
  trip_id int
}

Table contactmessages {
  id int [pk, increment]
  user_id int
  contactmessage_subject varchar
  contactmessage_message text
  created_at datetime
}


Table selectedpackages {
  id int [pk, increment]
  trip_id int
  flight_tripprice_id int
  hotel_tripprice_id int
}


Table orders {
  id int [pk, increment]
  user_id int [not null]
  trip_id int [not null]
  flight_id int [not null]
  accommodation_id int [not null]
  order_date datetime
  total_price decimal(10,2)
  status varchar

}



Ref: trips.destination_id - destinations.id

Ref: tripprices.trip_id > trips.id
Ref: tripprices.flight_id > flights.id
Ref: tripprices.accommodation_id > accommodations.id


Ref: favorites.user_id > users.id
Ref: favorites.trip_id > trips.id

Ref: contactmessages.user_id > users.id

Ref: selectedpackages.trip_id > trips.id
Ref: selectedpackages.flight_tripprice_id > tripprices.id
Ref: selectedpackages.hotel_tripprice_id > tripprices.id

Ref: orders.user_id > users.id
Ref: orders.trip_id > trips.id
Ref: orders.flight_id > flights.id
Ref: orders.accommodation_id > accommodations.id






